# Mark2

./: .clang-format  .gitignore  .gitmodules  ;  CMakeLists.txt  README.md  game.sln  mac_build_config.sh  sh.exe.stackdump
game/: CMakeLists.txt  action_bar.cpp  action_bar.h  add_const_if.h  adsr.cpp  adsr.h  algorithm.h  app.cpp  app.h  array2d.h  base64.cpp  base64.h  bump_mapping.glsl  camera.cpp  camera.h  command.h  cooldown.cpp  cooldown.h  curve.cpp  curve.h  declarations.h  deserialize.cpp  deserialize.h  exception.cpp  exception.h  find_path.cpp  find_path.h  game.vcxproj  game.vcxproj.filters  hid.cpp  hid.h  idamageable.h  ihas_bindings.h  instance.cpp  instance.h  interface_container.h  interface_damageable.h  interface_has_bindings.h  interface_serializable.h  interface_world_object.h  (+124 more)
game/algorithm/: accumulate.h  diff.h  enumerate.h  filter.h  find_if.h  find_one_if.h  for_each.h  has_one.h  match.h  mostly_unchanged.cpp  mostly_unchanged.h  range.h
game/interface/: container.h  damageable.h  has_bindings.h  item.h  ui.h  world_object.h
game/item/: base.cpp  base.h  chaos_orb.cpp  chaos_orb.h  deserialize.cpp  deserialize.h  shard.cpp  shard.h
game/module/: armor.cpp  armor.h  base.cpp  base.h  battery.cpp  battery.h  cannon.cpp  cannon.h  cargo.cpp  cargo.h  core.cpp  core.h  deserialize.cpp  energy_generator.cpp  energy_generator.h  engine.cpp  engine.h  flamethrower.cpp  flamethrower.h  healing_turret.cpp  healing_turret.h  laser.cpp  laser.h  shield_generator.cpp  shield_generator.h  turret.cpp  turret.h  warp_drive.cpp  warp_drive.h
game/module/impl/: healing_turret.cpp  healing_turret.h
game/resource/: image.cpp  manager.cpp  manager.h
game/ui/: action.h  action_bar.cpp  action_bar.h  button.cpp  button.h  chunky_button.cpp  chunky_button.h  chunky_window.cpp  chunky_window.h  container.cpp  container.h  event.cpp  event.h  inventory.cpp  inventory.h  item_button.cpp  item_button.h  label.cpp  label.h  main_menu.cpp  main_menu.h  node.h  options.cpp  options.h  prompt.cpp  prompt.h  recycler.cpp  recycler.h  ship_editor.cpp  ship_editor.h  tooltip.cpp  tooltip.h  ui.cpp  ui.h  vector_button.cpp  vector_button.h  window.cpp  window.h
game/ui/action/: base.h  clear_ui_state.h  drop_into_container.cpp  drop_into_container.h  drop_into_modular.cpp  drop_into_modular.h  grab_from_container.cpp  grab_from_container.h  grab_from_modular.cpp  grab_from_modular.h  legacy.h  modular_push.h  pop_ui_state.h  push_ui_state.h  quick_detach.cpp  quick_detach.h  recycle.cpp  recycle.h  release_grabbed.h  set_tooltip.h  stack_into_container.cpp  stack_into_container.h  use_grabbed_item.cpp  use_grabbed_item.h
game/ui/impl/: ui.cpp  ui.h
game/unit/: activable.h  base.cpp  base.h  bucket.cpp  bucket.h  damageable.h  deserialize.cpp  gate.cpp  gate.h  landing_pad.cpp  landing_pad.h  minion.cpp  minion.h  mobile.cpp  mobile.h  modular.cpp  modular.h  projectile.cpp  projectile.h
game/unit/impl/: modular.cpp  modular.h
main/: CMakeLists.txt  bump_mapping.glsl  main.cpp  main.vcxproj  options.yml  shader.glsl  state - Copy (2).yml  state - Copy.yml  state.backup.yml  turret.yml
main/blueprints/: antimatter-turret.yml  armor.yml  grenade-launcher.yml  grenade-ship.yml  laser-ship.yml  vanilla.yml
scripts/: git-lint.ps1  install-hooks.ps1
scripts/git-hooks/: commit-msg
test/: CMakeLists.txt  algorithm.cpp  array2d.cpp  core_env.h  main.cpp  optional.cpp  recycle.cpp  test.vcxproj  test.vcxproj.filters  unit_modular.cpp  vector.cpp  vector2d.cpp  vector_test.cpp
test/item/: chaos_orb.cpp  shard.cpp
test/module/: armor.cpp  battery.cpp  core.cpp  healing_turret.cpp
test/ui/: container.cpp  ui.cpp  window.cpp
test/unit/: modular.cpp
