CMAKE_MINIMUM_REQUIRED(VERSION 3.7.0)
PROJECT(mark2)

SET(YAML_CPP_BUILD_TESTS OFF)
SET(YAML_CPP_BUILD_TOOLS OFF)
SET(BUILD_SHARED_LIBS OFF)

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/lib)

ADD_SUBDIRECTORY("yaml-cpp")
ADD_SUBDIRECTORY("SFML")
ADD_SUBDIRECTORY("game")
ADD_SUBDIRECTORY("test")
ADD_SUBDIRECTORY("main")

