CMAKE_MINIMUM_REQUIRED(VERSION 3.7.0)
FILE(GLOB_RECURSE SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/**.cpp)
ADD_EXECUTABLE(unit_test ${SRC_FILES})
SET_TARGET_PROPERTIES(unit_test PROPERTIES CXX_STANDARD 17)
TARGET_LINK_LIBRARIES(unit_test game)
TARGET_INCLUDE_DIRECTORIES(unit_test PRIVATE ../Catch2/single_include)
ADD_TEST(NAME MyAwesomeTest COMMAND $<TARGET_FILE:unit_test>)